12.5 Fixed findFlightsThroughCity method